--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,7 +116,7 @@ jobs:
         run: pip install --upgrade maturin twine
 
       - name: Build abi3 wheel
-        run: maturin build --release --compatibility=abi3 --strip
+        run: maturin build --release --strip
 
       - name: Verify wheel
         # 使用 PowerShell 语法遍历 wheel 文件
