--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,20 +56,14 @@ jobs:
           CIBW_ARCHS_LINUX: "x86_64"
           CIBW_MANYLINUX_X86_64_IMAGE: "manylinux_2_28"
           CIBW_ARCHS_WINDOWS: "AMD64"
-          CIBW_BEFORE_BUILD: |
-            pip install --upgrade pip setuptools wheel
-            pip install maturin==1.9.2
+          CIBW_BEFORE_BUILD: "python -m pip install --upgrade setuptools wheel && python -m pip install maturin==1.9.2"
           CIBW_BEFORE_BUILD_LINUX: |
             sudo apt-get update
             sudo apt-get install -y pkg-config libssl-dev
-            pip install --upgrade pip setuptools wheel
-            pip install maturin==1.9.2
-          CIBW_BEFORE_BUILD_WINDOWS: |
-            pip install --upgrade pip setuptools wheel
-            pip install maturin==1.9.2
-          CIBW_BEFORE_BUILD_MACOS: |
-            pip install --upgrade pip setuptools wheel
-            pip install maturin==1.9.2
+            python -m pip install --upgrade setuptools wheel
+            python -m pip install maturin==1.9.2
+          CIBW_BEFORE_BUILD_WINDOWS: "python -m pip install --upgrade setuptools wheel && python -m pip install maturin==1.9.2"
+          CIBW_BEFORE_BUILD_MACOS: "python -m pip install --upgrade setuptools wheel && python -m pip install maturin==1.9.2"
           CIBW_ENVIRONMENT_MACOS: "MACOSX_DEPLOYMENT_TARGET=10.12"
           CIBW_BUILD_COMMAND: "maturin build --release --interpreter python"
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel}"
