--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -56,17 +57,18 @@ jobs:
           CIBW_ARCHS_LINUX: "x86_64"
           CIBW_MANYLINUX_X86_64_IMAGE: "manylinux_2_28"
           CIBW_ARCHS_WINDOWS: "AMD64"
-          CIBW_BEFORE_BUILD: "python -m pip install --upgrade setuptools wheel && python -m pip install maturin==1.9.2"
+          CIBW_BEFORE_BUILD: "python -m pip install setuptools wheel maturin==1.9.2"
           CIBW_BEFORE_BUILD_LINUX: |
             sudo apt-get update
             sudo apt-get install -y pkg-config libssl-dev
-            python -m pip install --upgrade setuptools wheel
-            python -m pip install maturin==1.9.2
-          CIBW_BEFORE_BUILD_WINDOWS: "python -m pip install --upgrade setuptools wheel && python -m pip install maturin==1.9.2"
-          CIBW_BEFORE_BUILD_MACOS: "python -m pip install --upgrade setuptools wheel && python -m pip install maturin==1.9.2"
+            python -m pip install setuptools wheel maturin==1.9.2
+          CIBW_BEFORE_BUILD_WINDOWS: "python -m pip install setuptools wheel maturin==1.9.2"
+          CIBW_BEFORE_BUILD_MACOS: "python -m pip install setuptools wheel maturin==1.9.2"
           CIBW_ENVIRONMENT_MACOS: "MACOSX_DEPLOYMENT_TARGET=10.12"
           CIBW_BUILD_COMMAND: "maturin build --release --interpreter python"
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel}"
+          # 禁用符号链接以加快 Windows 构建
+          CIBW_ENVIRONMENT_WINDOWS: "CIBW_VIRTUALENV_SYMLINKS=0"
 
       - name: Verify wheels
         run: |
@@ -83,6 +85,7 @@ jobs:
     needs: [build]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    timeout-minutes: 15
 
     steps:
       - name: Setup Python
@@ -178,6 +181,7 @@ jobs:
     needs: [publish]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v4
