--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,13 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 30
+    timeout-minutes: 45
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - os: windows-latest
+            python-version: '3.11'
 
     steps:
       - uses: actions/checkout@v4
@@ -34,13 +37,12 @@ jobs:
       - name: Install system dependencies (macOS)
         if: matrix.os == 'macos-latest'
         run: |
-          # 确保 macOS 有必要的工具
-          brew install pkg-config || true
+          brew install pkg-config openssl || true
 
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: ${{ matrix.python-version || '3.11' }}
 
       - name: Install build tools
         run: |
@@ -49,33 +51,65 @@ jobs:
 
       - name: Build wheels with cibuildwheel
         run: |
-          cibuildwheel --output-dir wheelhouse .
+          set -x
+          cibuildwheel --output-dir wheelhouse . 2>&1 | tee build.log
+          BUILD_EXIT_CODE=${PIPESTATUS[0]}
+          
+          echo "=== Build completed with exit code: $BUILD_EXIT_CODE ==="
+          echo "=== Build log contents ==="
+          cat build.log
+          
+          if [ -d wheelhouse ] && [ "$(ls -1 wheelhouse/*.whl 2>/dev/null | wc -l)" -gt 0 ]; then
+            echo "✅ Wheels generated successfully"
+            exit 0
+          else
+            echo "❌ No wheels generated"
+            exit $BUILD_EXIT_CODE
+          fi
         env:
-          CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-* cp313-*"
-          CIBW_SKIP: "*-musllinux_* pp*"
+          CIBW_BUILD: ${{ matrix.os == 'windows-latest' && 'cp311-*' || 'cp39-* cp310-* cp311-* cp312-* cp313-*' }}
+          CIBW_SKIP: "*-musllinux_* pp* *-win32"
           CIBW_ARCHS_MACOS: "x86_64 arm64"
           CIBW_ARCHS_LINUX: "x86_64"
           CIBW_MANYLINUX_X86_64_IMAGE: "manylinux_2_28"
           CIBW_ARCHS_WINDOWS: "AMD64"
+          # 设置 OpenSSL 环境变量
+          CIBW_ENVIRONMENT_LINUX: |
+            OPENSSL_DIR=/usr
+            OPENSSL_INCLUDE_DIR=/usr/include
+            OPENSSL_LIB_DIR=/usr/lib/x86_64-linux-gnu
+          CIBW_ENVIRONMENT_MACOS: |
+            OPENSSL_DIR=$(brew --prefix openssl)
+            OPENSSL_INCLUDE_DIR=$(brew --prefix openssl)/include
+            OPENSSL_LIB_DIR=$(brew --prefix openssl)/lib
           CIBW_BEFORE_BUILD: "python -m pip install setuptools wheel maturin==1.9.2"
           CIBW_BEFORE_BUILD_LINUX: |
             sudo apt-get update
             sudo apt-get install -y pkg-config libssl-dev
             python -m pip install setuptools wheel maturin==1.9.2
           CIBW_BEFORE_BUILD_WINDOWS: "python -m pip install setuptools wheel maturin==1.9.2"
-          CIBW_BEFORE_BUILD_MACOS: "python -m pip install setuptools wheel maturin==1.9.2"
+          CIBW_BEFORE_BUILD_MACOS: |
+            brew install pkg-config openssl || true
+            python -m pip install setuptools wheel maturin==1.9.2
           CIBW_ENVIRONMENT_MACOS: "MACOSX_DEPLOYMENT_TARGET=10.12"
           CIBW_BUILD_COMMAND: "maturin build --release --interpreter python"
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel}"
-          # 禁用符号链接以加快 Windows 构建
-          CIBW_ENVIRONMENT_WINDOWS: "CIBW_VIRTUALENV_SYMLINKS=0"
+          # Windows 优化配置
+          CIBW_ENVIRONMENT_WINDOWS: |
+            CIBW_VIRTUALENV_SYMLINKS=0
+            CIBW_TEST_SKIP=*
 
       - name: Verify wheels
         run: |
           python -m pip install twine
-          python -m twine check wheelhouse/*.whl
+          if [ -d wheelhouse ] && [ "$(ls -1 wheelhouse/*.whl 2>/dev/null | wc -l)" -gt 0 ]; then
+            python -m twine check wheelhouse/*.whl
+          else
+            echo "No wheels to verify"
+          fi
 
       - name: Upload wheels as artifacts
+        if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: wheels-${{ matrix.os }}
@@ -108,7 +142,6 @@ jobs:
           echo "=== 验证所有 wheel 文件 ==="
           python -m pip install twine
           
-          # 创建统一的目录存放所有 wheel 文件
           mkdir -p dist_final
           find dist -name "*.whl" -exec cp {} dist_final/ \;
           
@@ -125,92 +158,92 @@ jobs:
             fi
           
             python3 -c "
-          import zipfile
-          import sys
-          try:
-              with zipfile.ZipFile('$whl', 'r') as zf:
-                  bad_files = zf.testzip()
-                  if bad_files:
-                      print('❌ ZIP 损坏:', bad_files)
-                      sys.exit(1)
-          
-                  files = zf.namelist()
-                  has_metadata = any('METADATA' in f for f in files)
-                  has_wheel = any('WHEEL' in f for f in files)
-          
-                  if not (has_metadata and has_wheel):
-                      print('❌ 缺少必要的元数据文件')
-                      sys.exit(1)
-          
-                  print('✅ ZIP 结构正常')
-          
-          except zipfile.BadZipFile as e:
-              print('❌ ZIP 文件损坏:', e)
-              sys.exit(1)
-          except Exception as e:
-              print('❌ 验证失败:', e)
-              sys.exit(1)
-          " || { echo "❌ $(basename $whl) ZIP 验证失败，删除"; rm "$whl"; continue; }
-          
-            if python -m twine check "$whl"; then
-              echo "✅ $(basename $whl) 验证通过"
-            else
-              echo "❌ $(basename $whl) 验证失败，删除"
-              rm "$whl"
-            fi
-            echo "---"
-          done
-          
-          remaining_files=$(ls dist_final/*.whl 2>/dev/null | wc -l)
-          if [ "$remaining_files" -eq 0 ]; then
-            echo "❌ 没有有效的 wheel 文件"
-            exit 1
-          fi
-          
-          echo "=== 准备上传的文件 ==="
-          ls -la dist_final/
+  import zipfile
+  import sys
+try:
+  with zipfile.ZipFile('$whl', 'r') as zf:
+    bad_files = zf.testzip()
+    if bad_files:
+      print('❌ ZIP 损坏:', bad_files)
+      sys.exit(1)
 
-      - name: Upload to PyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: |
-          python -m twine upload --skip-existing dist_final/*.whl --verbose
+    files = zf.namelist()
+    has_metadata = any('METADATA' in f for f in files)
+    has_wheel = any('WHEEL' in f for f in files)
 
-  release:
-    needs: [publish]
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    timeout-minutes: 10
+    if not (has_metadata and has_wheel):
+      print('❌ 缺少必要的元数据文件')
+      sys.exit(1)
 
-    steps:
-      - uses: actions/checkout@v4
+    print('✅ ZIP 结构正常')
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+except zipfile.BadZipFile as e:
+  print('❌ ZIP 文件损坏:', e)
+  sys.exit(1)
+except Exception as e:
+  print('❌ 验证失败:', e)
+  sys.exit(1)
+  " || { echo "❌ $(basename $whl) ZIP 验证失败，删除"; rm "$whl"; continue; }
+  
+  if python -m twine check "$whl"; then
+  echo "✅ $(basename $whl) 验证通过"
+  else
+  echo "❌ $(basename $whl) 验证失败，删除"
+  rm "$whl"
+  fi
+  echo "---"
+  done
+  
+  remaining_files=$(ls dist_final/*.whl 2>/dev/null | wc -l)
+  if [ "$remaining_files" -eq 0 ]; then
+  echo "❌ 没有有效的 wheel 文件"
+  exit 1
+  fi
+  
+  echo "=== 准备上传的文件 ==="
+  ls -la dist_final/
 
-      - name: Download all wheels for release
-        uses: actions/download-artifact@v4
-        with:
-          path: release_dist
-          pattern: wheels-*
-          merge-multiple: true
+- name: Upload to PyPI
+  env:
+    TWINE_USERNAME: __token__
+    TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+  run: |
+    python -m twine upload --skip-existing dist_final/*.whl --verbose
 
-      - name: Prepare release assets
-        run: |
-          mkdir -p release_assets
-          find release_dist -name "*.whl" -exec cp {} release_assets/ \;
-          echo "=== 发布文件 ==="
-          ls -la release_assets/
+release:
+  needs: [publish]
+  runs-on: ubuntu-latest
+  if: startsWith(github.ref, 'refs/tags/')
+  timeout-minutes: 10
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: release_assets/*.whl
-          draft: false
-          prerelease: false
-          generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  steps:
+    - uses: actions/checkout@v4
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Download all wheels for release
+      uses: actions/download-artifact@v4
+      with:
+        path: release_dist
+        pattern: wheels-*
+        merge-multiple: true
+
+    - name: Prepare release assets
+      run: |
+        mkdir -p release_assets
+        find release_dist -name "*.whl" -exec cp {} release_assets/ \;
+        echo "=== 发布文件 ==="
+        ls -la release_assets/
+
+    - name: Create GitHub Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: release_assets/*.whl
+        draft: false
+        prerelease: false
+        generate_release_notes: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
