--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 45
+#    timeout-minutes: 45
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -108,7 +108,7 @@ jobs:
     needs: [build]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
-    timeout-minutes: 15
+#    timeout-minutes: 15
 
     steps:
       - name: Setup Python
@@ -219,7 +219,7 @@ jobs:
     needs: [publish]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
-    timeout-minutes: 10
+#    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v4
